--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta charset="ISO-8859-1">
-<title>ComputerStore Admin Control Panel</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width; initial-scale=1.0, minium-scale=1.0">
+
+<title>Home - ComputerStore Admin</title>
+
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
-	<h1>Welcome to ComputerStore Admin Control Panel</h1>
+	<div>
+		<nav class="navbar navbar-expand-lg bg-light navbar-light">
+			<a class="navbar-brand" th:href="@{/}"> 
+			<img th:src="@{/images/ComputerStoreLogo.png}" />
+			</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+				<span class="navbar-toggler-icon"></span>			
+			</button>
+			<div class="collapse navbar-collapse" id="topNavbar">
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/users}">Users</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/categories}">Categories</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/brands}">Brands</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/products}">Products</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/customers}">Customers</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/orders}">Orders</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/shipping}">Shipping</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/reports}">Reports</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/newspapers}">Newspapers</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/menu}">Menu</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link font-weight-bold" th:href="@{/settings}">Settings</a>
+					</li>
+				</ul>
+			</div>
+
+		</nav>
+	</div>
+	<div class="container-fluid">
+		<div>
+			<h1>Welcome to ComputerStore Admin Control Panel</h1>
+		</div>
+		<div>
+			<p>ComputerStore Panel - Copyright &copy;B1710131</p>
+		</div>
+	</div>
 </body>
 </html>
