--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
@@ -4,70 +4,97 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0, minium-scale=1.0">
 
-	<title>Home - ComputerStore Admin</title>
+	<title>Computer Store Admin - Home</title>
 
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
-	<link rel="shortcut icon"  th:href="@{/images/webicon.png}">
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
+	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}" />
 	
+	<link rel="shortcut icon"  th:href="@{/images/webicon.png}" />
+	<script type="text/javascript" th:src="@{/js/all.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
-	<div>
-		<nav class="navbar navbar-expand-lg bg-light navbar-light">
-			<a class="navbar-brand" th:href="@{/}"> 
-			<img th:src="@{/images/ComputerStoreLogo.png}" />
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>			
-			</button>
-			<div class="collapse navbar-collapse" id="topNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/users}">Users</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/categories}">Categories</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/brands}">Brands</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/products}">Products</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/customers}">Customers</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/orders}">Orders</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/shipping}">Shipping</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/reports}">Reports</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/newspapers}">Newspapers</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/menu}">Menu</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/settings}">Settings</a>
-					</li>
-				</ul>
-			</div>
-
-		</nav>
-	</div>
-	<div class="container-fluid">
-		<div>
-			<h1>Welcome to ComputerStore Admin Control Panel</h1>
+<div>
+	<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+		<input type="submit"/>
+	</form>
+	<nav class="navbar navbar-expand-lg bg-light navbar-light">
+		<a class="navbar-brand" th:href="@{/}"> 
+		<img th:src="@{/images/ComputerStoreLogo.png}" />
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+			<span class="navbar-toggler-icon"></span>			
+		</button>
+		<div class="collapse navbar-collapse" id="topNavbar">
+			<ul class="navbar-nav">
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/users}">Users</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/categories}">Categories</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/brands}">Brands</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/products}">Products</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/customers}">Customers</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/orders}">Orders</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/shipping}">Shipping</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/reports}">Reports</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/newspapers}">Newspapers</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/menu}">Menu</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/settings}">Settings</a>
+				</li>
+				<li class="float-right">
+					<div class="border border-secondary d-flex">
+						<div class="d-flex flex-column">
+							<span class="p-2 fas fa-user fa-2x text-center" style="color: black"></span>
+							<a class="p-2 nav-link" sec:authentication="principal.name"></a>
+						</div>
+						<div class="d-inline-block pr-2" style="margin:auto">
+							<a class="btn btn-outline-info text-info" id="editlink" th:href="@{/account}">Edit Profile</a>
+						</div>
+						<div class="d-inline-block pr-2" style="margin:auto">
+							<a class="btn btn-outline-danger text-danger" id="logoutlink" th:href="@{/logout}">Logout</a>
+						</div>
+					</div>
+				</li>
+			</ul>
 		</div>
+	</nav>
+</div>
+<div class="container-fluid">
+	<div>
+		<h1 class="font-weight-bold text-center pt-4">Welcome to Computer Store Admin Control Panel</h1>
 	</div>
-	<div class="bg-secondary text-white text-center fixed-bottom">
-		<h3>ComputerStore - Copyright &copy;B1710131</h3>
-	</div>
+</div>
+<div class="bg-secondary text-white text-center fixed-bottom">
+	<h3>ComputerStore - Copyright &copy;B1710131</h3>
+</div>
+
 </body>
+<script type="text/javascript">
+	$(document).ready(function(){
+		$("#logoutlink").on("click", function(e){
+			e.preventDefault();
+			document.logoutForm.submit();
+		});
+	});
+</script>
 </html>
