--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/users.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/users.html
@@ -4,196 +4,217 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width; initial-scale=1.0, minium-scale=1.0">
 
-	<title>Home - ComputerStore Admin</title>
+	<title>Computer Store Admin - Users</title>
 
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}" />
-	<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
 	
-	<link rel="shortcut icon"  th:href="@{/images/webicon.png}">
-	
+	<link rel="shortcut icon"  th:href="@{/images/webicon.png}" />
+	<script type="text/javascript" th:src="@{/js/all.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 <body>
-	<div>
-		<nav class="navbar navbar-expand-lg bg-light navbar-light">
-			<a class="navbar-brand" th:href="@{/}"> 
-			<img th:src="@{/images/ComputerStoreLogo.png}" />
-			</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
-				<span class="navbar-toggler-icon"></span>			
-			</button>
-			<div class="collapse navbar-collapse" id="topNavbar">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/users}">Users</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/categories}">Categories</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/brands}">Brands</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/products}">Products</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/customers}">Customers</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/orders}">Orders</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/shipping}">Shipping</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/reports}">Reports</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/newspapers}">Newspapers</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/menu}">Menu</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link font-weight-bold" th:href="@{/settings}">Settings</a>
-					</li>
-				</ul>
-			</div>
-
-		</nav>
+<div>
+	<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+		<input type="submit"/>
+	</form>
+	<nav class="navbar navbar-expand-lg bg-light navbar-light">
+		<a class="navbar-brand" th:href="@{/}"> 
+		<img th:src="@{/images/ComputerStoreLogo.png}" />
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
+			<span class="navbar-toggler-icon"></span>			
+		</button>
+		<div class="collapse navbar-collapse" id="topNavbar">
+			<ul class="navbar-nav">
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/users}">Users</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/categories}">Categories</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/brands}">Brands</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/products}">Products</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/customers}">Customers</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/orders}">Orders</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/shipping}">Shipping</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/reports}">Reports</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/newspapers}">Newspapers</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/menu}">Menu</a>
+				</li>
+				<li class="nav-item" style="margin:auto">
+					<a class="nav-link font-weight-bold" th:href="@{/settings}">Settings</a>
+				</li>
+				<li>
+					<div class="border border-secondary d-flex">
+						<div class="d-flex flex-column">
+							<span class="p-2 fas fa-user fa-2x text-center" style="color: black"></span>
+							<a class="p-2 nav-link" sec:authentication="principal.name"></a>
+						</div>
+						<div class="d-inline-block pr-2" style="margin:auto">
+							<a class="btn btn-outline-info text-info" id="editlink" th:href="@{/account}">Edit Profile</a>
+						</div>
+						<div class="d-inline-block pr-2" style="margin:auto">
+							<a class="btn btn-outline-danger text-danger" id="logoutlink" th:href="@{/logout}">Logout</a>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>
+	</nav>
+</div>
+<div class="container-fluid">
+	<div class="d-flex align-items-center justify-content-center mt-2">
+		<h2>Users List</h2>
 	</div>
-	<div class="container-fluid">
-		<div class="d-flex align-items-center justify-content-center mt-2">
-			<h2>Users List</h2>
-		</div>
-		<div class="d-flex align-items-center justify-content-center mb-2" style="width: 150px; margin: 0 auto;">
-			<a class="btn btn-primary" th:href="@{/users/new}">Create New User</a>
-		</div>
-		
-		<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
-		
-		<div>
-			<table class="table table-responsive-xl table-hover table-bordered text-center">
-				<thead class="thead-dark">
-					<tr>
-						<th scope="col">UserID</th>
-						
-						<th scope="col">First Name</th>
-						
-						<th scope="col">Last Name</th>
-						
-						<th scope="col">Email</th>
-						
-						<th scope="col">Enabled</th>
-						
-						<th scope="col">Role</th>
-						<th scope="col"></th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr th:each="user : ${listUsers}">
-						<td>[[${user.id}]]</td>
-						<td>[[${user.firstName}]]</td>
-						<td>[[${user.lastName}]]</td>
-						<td>[[${user.email}]]</td>
-						<td>
-							<a th:if="${user.enabled == true}" class="fas fa-check fa-1x" style="color:blue"></a>
-							<a th:if="${user.enabled == false}" class="fas fa-times fa-1x" style="color:red"></a>
-						</td>
-						<td>[[${user.roles}]]</td>
-						<!-- <td><span class="fas fa-user-circle fa-1x"></span></td> -->
-						<td>
-							<a class="fas fa-edit fa-1x" th:href="@{'/users/edit/' + ${user.id}}" title="Edit user"></a>
-							&nbsp; 
-							<a class="fas fa-trash-alt fa-1x icon-red link-delete" th:userId="${user.id}" 
-								th:href="@{'/users/delete/' + ${user.id}}" title="Delete user"></a>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-		
-		<div>
-			<nav>
-  				<ul class="pagination justify-content-center flex-wrap">
-  				
+	<div class="d-flex align-items-center justify-content-center mb-2" style="width: 150px; margin: 0 auto;">
+		<a class="btn btn-primary" th:href="@{/users/new}">Create New User</a>
+	</div>
+	
+	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
+	
+	<div>
+		<table class="table table-responsive-xl table-hover table-bordered text-center">
+			<thead class="thead-dark">
+				<tr>
+					<th scope="col">UserID</th>
+					
+					<th scope="col">First Name</th>
+					
+					<th scope="col">Last Name</th>
+					
+					<th scope="col">Email</th>
+					
+					<th scope="col">Enabled</th>
+					
+					<th scope="col">Role</th>
+					<th scope="col"></th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="user : ${listUsers}">
+					<td>[[${user.id}]]</td>
+					<td>[[${user.firstName}]]</td>
+					<td>[[${user.lastName}]]</td>
+					<td>[[${user.email}]]</td>
+					<td>
+						<a th:if="${user.enabled == true}" class="fas fa-check fa-1x" style="color:blue"></a>
+						<a th:if="${user.enabled == false}" class="fas fa-times fa-1x" style="color:red"></a>
+					</td>
+					<td>[[${user.roles}]]</td>
+					<!-- <td><span class="fas fa-user-circle fa-1x"></span></td> -->
+					<td>
+						<a class="fas fa-edit fa-1x" th:href="@{'/users/edit/' + ${user.id}}" title="Edit user"></a>
+						&nbsp; 
+						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:userId="${user.id}" 
+							th:href="@{'/users/delete/' + ${user.id}}" title="Delete user"></a>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+	</div>
+	
+	<div>
+		<nav>
+ 				<ul class="pagination justify-content-center flex-wrap">
+ 				
+ 					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+ 						<a class="page-link" 
+ 							th:href="@{/users/page/1}">First</a>
+ 					</li>
+  					
   					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
   						<a class="page-link" 
-  							th:href="@{/users/page/1}">First</a>
+  							th:href="@{'/users/page/' + ${currentPage - 1}}">Previous</a>
   					</li>
-   					
-   					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
-   						<a class="page-link" 
-   							th:href="@{'/users/page/' + ${currentPage - 1}}">Previous</a>
-   					</li>
 
-					<th:block th:if="${totalPages <= 10}">					
-					<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-						th:each="i : ${#numbers.sequence(1, totalPage)}">
-						<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
-					</li>
+				<th:block th:if="${totalPages <= 10}">					
+				<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
+					th:each="i : ${#numbers.sequence(1, totalPage)}">
+					<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+				</li>
+				</th:block>
+				
+				<th:block th:if="${totalPages > 10}">
+					<th:block th:if="${currentPage <= 5 || currentPage > totalPage - 4}">
+						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
+							th:each="i : ${#numbers.sequence(1, 5)}">
+							<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+						</li>
+						
+						<a class="page-link" th:href="@{'/users/page/' + 6 }">...</a>
+						
+						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
+							th:each="i : ${#numbers.sequence(totalPage - 4, totalPage)}">
+							<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+						</li>
 					</th:block>
-					
-					<th:block th:if="${totalPages > 10}">
-						<th:block th:if="${currentPage <= 5 || currentPage > totalPage - 4}">
-							<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-								th:each="i : ${#numbers.sequence(1, 5)}">
-								<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
-							</li>
-							
-							<a class="page-link" th:href="@{'/users/page/' + 6 }">...</a>
-							
-							<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
-								th:each="i : ${#numbers.sequence(totalPage - 4, totalPage)}">
-								<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
-							</li>
-						</th:block>
-					</th:block>
+				</th:block>
 
-    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-    					<a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1} }">Next</a>
-    				</li>
-    				
-    				
-    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-    					<a class="page-link" th:href="@{'/users/page/' + ${totalPage} }">Last</a>
-    				</li>
-    				
-  				</ul>
-			</nav>
-		</div>
-		
-		<div class="modal fade text-center" id="confirmModal">
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h4 class="modal-title">Confirm delete</h4>
-						<button type="button" class="close" data-dismiss="modal">&times;</button>
-					</div>
-					<div class="modal-body">
-						<span id="confirmText"></span>
-					</div>
-					<div class="modal-footer">
-						<a class="btn btn-success" href="" id="yesButton">Yes</a>
-						<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
-					</div>					
-				</div>
-			</div>			
-		</div>
+   				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
+   					<a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1} }">Next</a>
+   				</li>
+   				
+   				
+   				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
+   					<a class="page-link" th:href="@{'/users/page/' + ${totalPage} }">Last</a>
+   				</li>
+   				
+ 				</ul>
+		</nav>
 	</div>
-	<script type="text/javascript">
-		$(document).ready(function() {
-			$(".link-delete").on("click", function(e) {
-				e.preventDefault();
-				link = $(this);
-				userId = link.attr("UserId");
-				$("#yesButton").attr("href", link.attr("href"));
-				$("#confirmText").text("Delete user with ID " + userId + "?");
-				$("#confirmModal").modal();
-			});
+	
+	<div class="modal fade text-center" id="confirmModal">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h4 class="modal-title">Confirm delete</h4>
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+				</div>
+				<div class="modal-body">
+					<span id="confirmText"></span>
+				</div>
+				<div class="modal-footer">
+					<a class="btn btn-success" href="" id="yesButton">Yes</a>
+					<button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+				</div>					
+			</div>
+		</div>			
+	</div>
+</div>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$(".link-delete").on("click", function(e) {
+			e.preventDefault();
+			link = $(this);
+			userId = link.attr("UserId");
+			$("#yesButton").attr("href", link.attr("href"));
+			$("#confirmText").text("Delete user with ID " + userId + "?");
+			$("#confirmModal").modal();
 		});
-	</script>
+	});
+	$(document).ready(function(){
+		$("#logoutlink").on("click", function(e){
+			e.preventDefault();
+			document.logoutForm.submit();
+		});
+	});
+</script>
 </body>
 </html>
