add Category CRUD

--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/categories.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/categories.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="header :: page_head('Computer Store Admin - Users')"></head>
+<head th:replace="header :: page_head('Computer Store Admin - categories')"></head>
 <body>
 <div th:replace="navbar :: navbar"></div>
 <div class="container-fluid">
 	<div class="d-flex align-items-center justify-content-center mt-2">
-		<h2>Users List</h2>
+		<h2>Categories List</h2>
 	</div>
 	<div class="d-flex align-items-center justify-content-center mb-2" style="width: 150px; margin: 0 auto;">
-		<a class="btn btn-primary" th:href="@{/users/new}">Create New User</a>
+		<a class="btn btn-primary" th:href="@{/categories/new}">Create Category</a>
 	</div>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
@@ -18,42 +18,36 @@
 		<table class="table table-responsive-xl table-hover table-bordered text-center">
 			<thead class="thead-dark">
 				<tr>
-					<th scope="col">UserID</th>
+					<th scope="col">ID</th>
 					
-					<th scope="col">First Name</th>
-					
-					<th scope="col">Last Name</th>
-					
-					<th scope="col">Email</th>
+					<th scope="col">Category Name</th>
 					
 					<th scope="col">Enabled</th>
 					
-					<th scope="col">Role</th>
 					<th scope="col"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="user : ${listUsers}">
-					<td>[[${user.id}]]</td>
-					<td>[[${user.firstName}]]</td>
-					<td>[[${user.lastName}]]</td>
-					<td>[[${user.email}]]</td>
+				<tr th:each="category : ${listCategories}">
+					<td>[[${category.id}]]</td>
+					<td>[[${category.name}]]</td>
 					<td>
-						<a th:if="${user.enabled == true}" class="fas fa-check fa-1x" style="color:blue"></a>
-						<a th:if="${user.enabled == false}" class="fas fa-times fa-1x" style="color:red"></a>
+						<a th:if="${category.enabled == true}" class="fas fa-check fa-1x" style="color:blue"></a>
+						<a th:if="${category.enabled == false}" class="fas fa-times fa-1x" style="color:red"></a>
 					</td>
-					<td>[[${user.roles}]]</td>
-					<!-- <td><span class="fas fa-user-circle fa-1x"></span></td> -->
+					<!-- <td><span class="fas fa-category-circle fa-1x"></span></td> -->
 					<td>
-						<a class="fas fa-edit fa-1x" th:href="@{'/users/edit/' + ${user.id}}" title="Edit user"></a>
+						<a class="fas fa-edit fa-1x" th:href="@{'/categories/edit/' + ${category.id}}" title="Edit category"></a>
 						&nbsp; 
-						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:userId="${user.id}" 
-							th:href="@{'/users/delete/' + ${user.id}}" title="Delete user"></a>
+						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:categoryId="${category.id}" 
+							th:href="@{'/categories/delete/' + ${category.id}}" title="Delete category"></a>
 					</td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
+	
+	<!--
 	
 	<div>
 		<nav>
@@ -61,18 +55,18 @@
  				
  					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
  						<a class="page-link" 
- 							th:href="@{/users/page/1}">First</a>
+ 							th:href="@{/categories/page/1}">First</a>
  					</li>
   					
   					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
   						<a class="page-link" 
-  							th:href="@{'/users/page/' + ${currentPage - 1}}">Previous</a>
+  							th:href="@{'/categories/page/' + ${currentPage - 1}}">Previous</a>
   					</li>
 
 				<th:block th:if="${totalPages <= 10}">					
 				<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 					th:each="i : ${#numbers.sequence(1, totalPage)}">
-					<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+					<a class="page-link" th:href="@{'/categories/page/' + ${i}}">[[${i}]]</a>
 				</li>
 				</th:block>
 				
@@ -80,30 +74,32 @@
 					<th:block th:if="${currentPage <= 5 || currentPage > totalPage - 4}">
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(1, 5)}">
-							<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" th:href="@{'/categories/page/' + ${i}}">[[${i}]]</a>
 						</li>
 						
-						<a class="page-link" th:href="@{'/users/page/' + 6 }">...</a>
+						<a class="page-link" th:href="@{'/categories/page/' + 6 }">...</a>
 						
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(totalPage - 4, totalPage)}">
-							<a class="page-link" th:href="@{'/users/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" th:href="@{'/categories/page/' + ${i}}">[[${i}]]</a>
 						</li>
 					</th:block>
 				</th:block>
 
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link" th:href="@{'/users/page/' + ${currentPage + 1} }">Next</a>
+   					<a class="page-link" th:href="@{'/categories/page/' + ${currentPage + 1} }">Next</a>
    				</li>
    				
    				
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link" th:href="@{'/users/page/' + ${totalPage} }">Last</a>
+   					<a class="page-link" th:href="@{'/categories/page/' + ${totalPage} }">Last</a>
    				</li>
    				
  				</ul>
 		</nav>
 	</div>
+	
+	-->
 	
 	<div class="modal fade text-center" id="confirmModal">
 		<div class="modal-dialog">
@@ -122,15 +118,17 @@
 			</div>
 		</div>			
 	</div>
+	
 </div>
+
 <script type="text/javascript">
 	$(document).ready(function() {
 		$(".link-delete").on("click", function(e) {
 			e.preventDefault();
 			link = $(this);
-			userId = link.attr("UserId");
+			categoryId = link.attr("categoryId");
 			$("#yesButton").attr("href", link.attr("href"));
-			$("#confirmText").text("Delete user with ID " + userId + "?");
+			$("#confirmText").text("Delete this category (ID " + categoryId + ")?");
 			$("#confirmModal").modal();
 		});
 	});
