--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
 	<div class="bg-secondary text-white text-center fixed-bottom">
 		<h3>ComputerStore - Copyright &copy;B1710131</h3>
 	</div>
+	<a href="http://localhost:8000/chatroom.html">Chatroom!</a>
+	
 
 </body>
 <script th:src="@{/js/all.js}"></script>
