--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/header.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/header.html
@@ -10,8 +10,10 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 	<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/css/all.css}" />	
 	<link rel="shortcut icon"  th:href="@{/images/webicon.png}" />
+	<link rel="stylesheet" th:href="@{/richtext/richtext.min.css}" />
 	<script type="text/javascript" th:src="@{/js/all.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+	<script th:src="@{/richtext/jquery.richtext.min.js}"></script>
 </head>
 </html>
