--- a/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/products.html
+++ b/ComputerStoreWebParent/ComputerStoreBackend/src/main/resources/templates/products.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head th:replace="header :: page_head('Computer Store Admin - brands')"></head>
+<head th:replace="header :: page_head('Computer Store Admin - Product')"></head>
 <body>
 <div th:replace="navbar :: navbar"></div>
 <div class="container-fluid">
 	<div class="d-flex align-items-center justify-content-center mt-2">
-		<h2>Brand List</h2>
+		<h2>Product List</h2>
 	</div>
 	<div class="d-flex align-items-center justify-content-center mb-2" style="width: 150px; margin: 0 auto;">
-		<a class="btn btn-primary" th:href="@{/brands/new}">Create Brand</a>
+		<a class="btn btn-primary" th:href="@{/products/new}">Create Product</a>
 	</div>
 	
 	<div th:if="${message != null}" class="alert alert-success text-center">[[${message}]]</div>
@@ -20,28 +20,45 @@
 				<tr>
 					<th scope="col">ID</th>
 					
-					<th scope="col">Brand Name</th>
+					<th scope="col">Product Name</th>
+					
+					<th scope="col">Image</th>
 					
 					<th scope="col">Category</th>
+					
+					<th scope="col">Brand</th>
+					
+					<th scope="col">Purchase</th>
+					
+					<th scope="col">Selling</th>
+					
+					<th scope="col">Discount</th>
+					
+					<th scope="col">In stock</th>
 					
 					<th scope="col"></th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="brand : ${listBrands}">
-					<td>[[${brand.id}]]</td>
-					<td>[[${brand.name}]]</td>
+				<tr th:each="product : ${listproducts}">
+					<td>[[${product.id}]]</td>
+					<td>[[${product.name}]]</td>
+					<td></td>
+					<td>[[${product.category.name}]]</td>
+					<td>[[${product.brand.name}]]</td>
+					<td>[[${product.purchasePrice}]]</td>
+					<td>[[${product.sellingPrice}]]</td>
+					<td>[[${product.discount}]]</td>
 					<td>
-						<th:block th:each="cat : ${brand.categories}">
-						<span th:text="'(' + ${cat.name} + ')' + '&nbsp;'"></span>
-						</th:block>
+						<a th:if="${product.instock == true}" class="fas fa-check fa-1x" style="color:blue"></a>
+						<a th:if="${product.instock == false}" class="fas fa-times fa-1x" style="color:red"></a>
 					</td>
-					<!-- <td><span class="fas fa-brand-circle fa-1x"></span></td> -->
+					<!-- <td><span class="fas fa-product-circle fa-1x"></span></td> -->
 					<td>
-						<a class="fas fa-edit fa-1x" th:href="@{'/brands/edit/' + ${brand.id}}" title="Edit brand"></a>
+						<a class="fas fa-edit fa-1x" th:href="@{'/products/edit/' + ${product.id}}" title="Edit product"></a>
 						&nbsp; 
-						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:brandId="${brand.id}" 
-							th:href="@{'/brands/delete/' + ${brand.id}}" title="Delete brand"></a>
+						<a class="fas fa-trash-alt fa-1x link-delete" style="color: red" th:productId="${product.id}" 
+							th:href="@{'/products/delete/' + ${product.id}}" title="Delete product"></a>
 					</td>
 				</tr>
 			</tbody>
@@ -54,18 +71,18 @@
  				
  					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
  						<a class="page-link" 
- 							th:href="@{/brands/page/1}">First</a>
+ 							th:href="@{/products/page/1}">First</a>
  					</li>
   					
   					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
   						<a class="page-link" 
-  							th:href="@{'/brands/page/' + ${currentPage - 1}}">Previous</a>
+  							th:href="@{'/products/page/' + ${currentPage - 1}}">Previous</a>
   					</li>
 
 				<th:block th:if="${totalPages <= 10}">					
 				<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 					th:each="i : ${#numbers.sequence(1, totalPage)}">
-					<a class="page-link" th:href="@{'/brands/page/' + ${i}}">[[${i}]]</a>
+					<a class="page-link" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
 				</li>
 				</th:block>
 				
@@ -73,25 +90,25 @@
 					<th:block th:if="${currentPage <= 5 || currentPage > totalPage - 4}">
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(1, 5)}">
-							<a class="page-link" th:href="@{'/brands/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
 						</li>
 						
-						<a class="page-link" th:href="@{'/brands/page/' + 6 }">...</a>
+						<a class="page-link" th:href="@{'/products/page/' + 6 }">...</a>
 						
 						<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
 							th:each="i : ${#numbers.sequence(totalPage - 4, totalPage)}">
-							<a class="page-link" th:href="@{'/brands/page/' + ${i}}">[[${i}]]</a>
+							<a class="page-link" th:href="@{'/products/page/' + ${i}}">[[${i}]]</a>
 						</li>
 					</th:block>
 				</th:block>
 
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link" th:href="@{'/brands/page/' + ${currentPage + 1} }">Next</a>
+   					<a class="page-link" th:href="@{'/products/page/' + ${currentPage + 1} }">Next</a>
    				</li>
    				
    				
    				<li th:class="${currentPage < totalPage ? 'page-item' : 'page-item disabled'}">
-   					<a class="page-link" th:href="@{'/brands/page/' + ${totalPage} }">Last</a>
+   					<a class="page-link" th:href="@{'/products/page/' + ${totalPage} }">Last</a>
    				</li>
    				
  				</ul>
@@ -123,9 +140,9 @@
 		$(".link-delete").on("click", function(e) {
 			e.preventDefault();
 			link = $(this);
-			brandId = link.attr("brandId");
+			productId = link.attr("productId");
 			$("#yesButton").attr("href", link.attr("href"));
-			$("#confirmText").text("Delete this brand (ID " + brandId + ")?");
+			$("#confirmText").text("Delete this product (ID " + productId + ")?");
 			$("#confirmModal").modal();
 		});
 	});
